test/parser/template/103.stderr
At: "103.hac":9:
parse error: syntax error
parser stacks:
state	value
#STATE#	(null) 
#STATE#	list<(root_item)>: (process-definition) ... [6:1..17]
#STATE#	(null) 
#STATE#	(template-formal-decl-list-pair) [8:10..17]
#STATE#	keyword: defproc [9:1..7]
#STATE#	identifier: bar [9:9..11]
#STATE#	( [9:12]
#STATE#	(type-ref) [9:13..18]
#STATE#	identifier: a [9:20]
#STATE#	< [9:21]
in state #STATE#, possible rules are:
	port_formal_id : ID . optional_dense_range_list  (#RULE#)
	optional_dense_range_list : .  (#RULE#)
acceptable tokens are: 
	')' (reduce)
	',' (reduce)
	';' (reduce)
	'[' (shift)
